<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.crossover.trial</groupId>
    <artifactId>weather</artifactId>
    <version>1.2.0</version>

    <properties>
        <jersey.version>2.22</jersey.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${jersey.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
	<profiles>
		<profile>
			<id>linux</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
	        <properties>
	            <customArg>-DmyUniqueToProfile1Args</customArg>
	        </properties>
			<distributionManagement>
			    <site>
			      	<id>weather</id>
					<!-- File Protocol Linux -->
			      	<!-- <url>file:///opt/cloudhost/tomcat8/webapps/weather-dist/maven-report/</url> -->
			      	<url>file:///tmp/maven-report/</url>
			      	<!-- <url>file://maven-report/</url> -->
			    </site>
			</distributionManagement>
		</profile>
		<profile>
			<id>windows</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
	        <properties>
	            <customArg>-DmyUniqueToProfile2Args</customArg>
	        </properties>
			<distributionManagement>
			    <site>
			      	<id>weather</id>
					<!-- File Protocol Windows -->
			      	<url>file:///C:/springsource/workspaces/ws_airport-weather/weather-dist/maven-report</url>
			      	<!-- <url>file:///maven-report/</url> -->
			    </site>
			</distributionManagement>
		</profile>
	</profiles>

    <dependencies>
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>javax.ws.rs-api</artifactId>
            <version>2.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-common</artifactId>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-client</artifactId>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-server</artifactId>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-grizzly2-http</artifactId>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.test-framework</groupId>
            <artifactId>jersey-test-framework-util</artifactId>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.4</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
            <artifactId>jersey-test-framework-provider-bundle</artifactId>
            <type>pom</type>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
				</configuration>
			</plugin>
        </plugins>
    </build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.7</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>plugin-management</report>
							<report>distribution-management</report>
							<report>dependency-info</report>
							<report>scm</report>
							<!-- <report>mailing-list</report> -->
							<!-- <report>issue-tracking</report> -->
							<report>cim</report>
							<report>plugins</report>
							<!-- <report>license</report> -->
							<report>project-team</report>
							<report>summary</report>
							<report>dependencies</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.9.1</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
	                <!-- <argLine>-Xms512m -Xmx1024m</argLine> -->
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
	            </configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.6</version>
			</plugin>			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>
			<!--
			<plugin>
				<artifactId>maven-clover-plugin</artifactId>
			</plugin>			
			-->
			<plugin>
    			<artifactId>maven-clover2-plugin</artifactId>
				<groupId>com.atlassian.maven.plugins</groupId>
				<version>3.1.10.1</version>
			</plugin>			
		</plugins>
	</reporting>

	<developers>
		<developer>
			<id>ces_ch</id>
			<name>Cesar Francisco Chavez Maldonado</name>
			<email>ces_ch@hotmail.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>Private</organization>
			<timezone>-5</timezone>
		</developer>
	</developers>

	<organization>
		<name>Private</name>
		<url>http://dev-war-app.azurewebsites.net/</url>
	</organization>

</project>
